--- a/src/sass/components/_components.scss
+++ b/src/sass/components/_components.scss
@@ -27,7 +27,7 @@
   }
 }
 
-/* .container {
+ .container {
   padding: 0px 10px;
   margin: 0 auto;
   @media screen and (min-width: $tablet) {
@@ -38,4 +38,4 @@
     padding: 0px 15px;
   }
 }
- */
+ 
