--- a/src/sass/layout/_guarantees.scss
+++ b/src/sass/layout/_guarantees.scss
@@ -34,6 +34,7 @@
     }
 }
 .guarantees__item-text{
+    @include font(500, 12px, 1.66, 0.03em);
     color: $text-semi-dark;
 }
 .guarantees__text-accent{
@@ -46,7 +47,7 @@
     border: 0;
     border-left: 1px dashed #B9B9B9;
     height: 68px;
-    bottom: -10px;
+    bottom: -16px;
     left: 6px;
 }
 @media screen and (min-width: $tablet){
@@ -67,9 +68,7 @@
         @include font(800, 46px, 1.30, 0.03em);
         margin-bottom: 50px;
     }
-        .guarantees__bg { 
-            
-        }
+        
         .guarantees__icon{
             max-width: 22px;
             max-height: 30px;
