--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Monserat", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
@@ -104,7 +104,7 @@ p {
 
 .teacher {
   padding-top: 39px;
-  padding-bottom: 50px;
+  margin-bottom: 50px;
 }
 
 .teacher__title {
@@ -129,25 +129,41 @@ p {
   margin-bottom: 30px;
 }
 
+.teacher__name::after {
+  content: "";
+  display: block;
+  margin-top: 10px;
+  width: 100%;
+  height: 1px;
+  background-color: #b9b9b9;
+}
+
 .teacher__achievements {
+  margin-bottom: 23px;
+}
+
+.teacher__content {
   width: 280px;
-  height: 193px;
-  margin-bottom: 43px;
+}
+
+.teacher__achievements::after {
+  content: "";
+  display: block;
+  width: 20px;
+  height: 2px;
+  background-color: #ff6b09;
 }
 
 .teacher__item {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-
-.teacher__item:not(:last-child) {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 .teacher__icon {
-  width: 17px;
-  height: 14px;
+  max-width: 17px;
+  max-height: 14px;
   fill: #ff6b09;
   margin-right: 9px;
 }
@@ -155,30 +171,216 @@ p {
 .teacher__item-text {
   font-weight: 600;
   font-size: 14px;
-  line-height: 1.2;
+  line-height: 1.21;
   letter-spacing: 0.06em;
 }
 
 .teacher__text {
   font-weight: 500;
   font-size: 12px;
-  line-height: 1.6;
+  line-height: 1.67;
   letter-spacing: 0.06em;
   color: #b9b9b9;
+}
+
+.teacher__text:not(:last-child) {
+  margin-bottom: 20px;
 }
 
 .teacher__link {
   font-weight: 500;
   font-size: 12px;
-  line-height: 1.6;
+  line-height: 1.67;
   letter-spacing: 0.06em;
+  color: #ff6b09;
+  padding-top: 10px;
+  display: block;
+}
+
+@media screen and (min-width: 768px) {
+  .teacher {
+    padding-top: 50px;
+  }
+  .teacher__box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .teacher__content {
+    display: block;
+    margin-left: 40px;
+    width: 400px;
+  }
+  .teacher__achievements {
+    margin-bottom: 18px;
+  }
+}
+
+@media screen and (min-width: 1344px) {
+  .teacher {
+    padding-top: 130px;
+  }
+  .teacher__title {
+    font-weight: 800;
+    font-size: 46px;
+    line-height: 1.3;
+    letter-spacing: 0.03em;
+    margin-bottom: 50px;
+  }
+  .teacher__name {
+    font-weight: 800;
+    font-size: 30px;
+    line-height: 1.23;
+    letter-spacing: 0.08em;
+    margin-bottom: 45px;
+  }
+  .teacher__name::after {
+    margin-top: 15px;
+  }
+  .teacher__img {
+    width: 530px;
+    height: 667px;
+  }
+  .teacher__icon {
+    max-width: 24px;
+    max-height: 20px;
+  }
+  .teacher__achievements {
+    margin-bottom: 43px;
+  }
+  .teacher__text {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.55;
+    letter-spacing: 0.08em;
+  }
+  .teacher__link {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.55;
+    letter-spacing: 0.06em;
+    padding-top: 20px;
+  }
+  .teacher__content {
+    margin-left: 30px;
+    width: 640px;
+  }
+}
+
+@media screen and (max-width: 764px) {
+  .guarantees .container {
+    padding: 0;
+  }
+}
+
+.guarantees {
+  margin-bottom: 50px;
+}
+
+.guarantees__list {
+  background-color: #f1f1f1;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
+.guarantees__list {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.guarantees__title {
+  font-weight: 800;
+  font-size: 26px;
+  line-height: 1.31;
+  letter-spacing: 0.03em;
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+.guarantees__icon {
+  max-width: 14px;
+  max-height: 20px;
+  fill: #ff6b09;
+  margin-right: 20px;
+}
+
+.guarantees__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+}
+
+.guarantees__item:not(:last-child) {
+  margin-bottom: 23px;
+}
+
+.guarantees__item-text {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.66;
+  letter-spacing: 0.03em;
+  color: #3d3d3d;
+}
+
+.guarantees__text-accent {
   color: #ff6b09;
 }
 
-/* @mixin font($fw, $fs, $lh, $ls) {
-  font-weight: $fw;
-  font-size: $fs;
-  line-height: $lh;
-  letter-spacing: $ls;
-} */
+.guarantees__item:not(:last-of-type)::before {
+  position: absolute;
+  content: "";
+  display: block;
+  border: 0;
+  border-left: 1px dashed #B9B9B9;
+  height: 68px;
+  bottom: -16px;
+  left: 6px;
+}
+
+@media screen and (min-width: 768px) {
+  .guarantees__item:not(:last-of-type)::before {
+    height: 35px;
+    bottom: -20px;
+  }
+  .guarantees__list {
+    padding-right: 50px;
+    padding-left: 79px;
+  }
+}
+
+@media screen and (min-width: 1344px) {
+  .guarantees {
+    margin-bottom: 130px;
+  }
+  .guarantees__title {
+    font-weight: 800;
+    font-size: 46px;
+    line-height: 1.3;
+    letter-spacing: 0.03em;
+    margin-bottom: 50px;
+  }
+  .guarantees__icon {
+    max-width: 22px;
+    max-height: 30px;
+    margin-right: 30px;
+  }
+  .guarantees__item-text {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.4;
+    letter-spacing: 0.03em;
+  }
+  .guarantees__item:not(:last-of-type)::before {
+    height: 40px;
+    left: 10px;
+  }
+  .guarantees__list {
+    padding-top: 50px;
+    padding-bottom: 45px;
+    padding-right: 112px;
+    padding-left: 112px;
+    width: 1314px;
+  }
+}
 /*# sourceMappingURL=main.css.map */
