Победа над кнопкой консультации

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -26,6 +26,9 @@
         </ul>
         <a href="#" class="header-consult-link">КОНСУЛЬТАЦИЯ ПО ТЕЛЕФОНУ</a>
       </div>
+
+      <a href="#" class="header-consult-link">КОНСУЛЬТАЦИЯ ПО ТЕЛЕФОНУ</a>
+
       <button
         type="button"
         class="menu-button"
