--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -14,6 +14,10 @@
 
 .legal__list {
   @extend %list;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 113px;
 }
 
 .legal__item {
@@ -55,10 +59,12 @@
 }
 
 .footer__accent {
+  display: inline-block;
   font-family: Titan One;
   color: $color-pink;
   font-size: 18px;
   line-height: 1.17;
+  margin-bottom: 17px;
 }
 
 .footer__title {
