--- a/src/sass/layout/_how-we-do-it.scss
+++ b/src/sass/layout/_how-we-do-it.scss
@@ -110,6 +110,8 @@
 }
 
 .how-we-do-it__icon {
+  display: inline-block;
+  text-align: center;
   margin-bottom: 20px;
 
   fill: var(--orange-color);
