--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -29,8 +29,7 @@
   transition: transform 500ms var(--timing-function) 250ms;
 
   .backdrop.is-hidden & {
-    // transform: scale(0) rotateX(-90deg);
-    transform: translateY(100vh);
+    transform: scale(0) rotateX(-90deg);
     transition: transform 500ms var(--timing-function);
   }
 }
@@ -142,7 +141,7 @@
   padding-left: 42px;
   outline: none;
   border: 1px solid rgba(33, 33, 33, 0.4);
-  border-radius: 50px;
+  border-radius: 4px;
 
   font-size: 14px;
   //   line-height: 1.14;
