--- a/src/partials/features.html
+++ b/src/partials/features.html
@@ -4,7 +4,7 @@
     <ul class="features-list">
       <li class="features-list-item">
         <a href="/" class="features-link">
-          <svg class="features-icon" width="45px" height="48px">
+          <svg class="features-icon" width="46" height="48">
             <use href="./images/icons/sprite.svg#study-program"></use>
           </svg>
 
@@ -21,7 +21,7 @@
 
       <li class="features-list-item">
         <a href="/" class="features-link">
-          <svg class="features-icon" width="45px" height="48px">
+          <svg class="features-icon" width="48" height="47">
             <use href="./images/icons/sprite.svg#mobile-learning"></use>
           </svg>
           <h3 class="features-subject">
@@ -29,32 +29,28 @@
           </h3>
           <span class="features-space">—</span>
           <p class="features-subtitle">
-            Учитель поможет не только в аудитории, но и во время<span
-              class="line-break"
-              >домашней подготовки. Родители могут участвовать в чате при
-              желании.</span
-            >
+            Учитель поможет не только в аудитории, но и во время домашней подготовки. Родители могут участвовать в чате при желании.
           </p>
         </a>
       </li>
       <li class="features-list-item">
         <a href="/" href="/" class="features-link">
-          <svg class="features-icon" width="45px" height="48px">
+          <svg class="features-icon" width="68" height="48">
             <use href="./images/icons/sprite.svg#open-book"></use>
           </svg>
-          <h3 class="features-subject">Привычка читать на английском языке</h3>
+          <h3 class="features-subject">
+            Привычка читать<span class="line-break"></span>на английском языке</span>
+          </h3>
           <span class="features-space">—</span>
           <p class="features-subtitle">
             Статьи из источников, которые используются при разработке настоящего
-            ВНО, будут приходить<span class="line-break"
-              >на телефон дважды в неделю.</span
-            >
+            ВНО, будут приходить на телефон дважды в неделю.
           </p>
         </a>
       </li>
       <li class="features-list-item">
         <a href="/" class="features-link">
-          <svg class="features-icon" width="45px" height="48px">
+          <svg class="features-icon" width="48" height="48">
             <use href="./images/icons/sprite.svg#support"></use>
           </svg>
           <h3 class="features-subject">
@@ -62,37 +58,29 @@
           </h3>
           <span class="features-space">—</span>
           <p class="features-subtitle">
-            Мы научим тебя методикам прохождения тестирований,<span
-              class="line-break"
-              >умению планировать свою</span
-            >
-            <span class="line-break">подготовку уверенности в себе.</span>
+            Мы научим тебя методикам прохождения тестирований, умению планировать свою подготовку уверенности в себе.
           </p>
         </a>
       </li>
       <li class="features-list-item">
         <a href="/" class="features-link">
-          <svg class="features-icon" width="45px" height="48px">
+          <svg class="features-icon" width="40" height="48">
             <use href="./images/icons/sprite.svg#female-student"></use>
           </svg>
           <h3 class="features-subject">Обучение по авторским пособиям</h3>
           <span class="features-space">—</span>
           <p class="features-subtitle">
-            Тебе не нужно тратить время на самостоятельный поиск материала<span
-              class="line-break"
-              >и ничего покупать дополнительно. Мы составили 2 пособия для
-              тебя.</span
-            >
+            Тебе не нужно тратить время на самостоятельный поиск материала и ничего покупать дополнительно. Мы составили 2 пособия для тебя.
           </p>
         </a>
       </li>
       <li class="features-list-item">
         <a href="/" class="features-link">
-          <svg class="features-icon" width="45px" height="48px">
+          <svg class="features-icon" width="57" height="48">
             <use href="./images/icons/sprite.svg#audio-book"></use>
           </svg>
           <h3 class="features-subject">
-            Умение воспринимать устную английскуб речь
+            Умение воспринимать устную английскую речь
           </h3>
           <span class="features-space">—</span>
           <p class="features-subtitle">
