--- a/src/sass/layout/_page-footer.scss
+++ b/src/sass/layout/_page-footer.scss
@@ -9,6 +9,6 @@
 //     width: 100%;
 //     height: 100%;
 //     content: '';
-//     background-image: url('/src/icons/footer-icons/footer-logo.svg');
+//     background-image: url('../icons/footer-icons/footer-logo.svg');
 //   }
 // }
