--- a/src/partials/page-footer.html
+++ b/src/partials/page-footer.html
@@ -1,9 +1,13 @@
-<section class="footer">
+<footer class="footer">
     <div class="container">
-        <a href="./index.html" class="footer__logo">
-            <svg width="84.12" height="30">
-                <use href="./icons/footer-sprite.svg#icon-footer-logo"></use>
-            </svg>
-        </a>
+
+        <div class="footer__contacts">
+            <a href="./index.html" class="footer__logo">
+                <svg width="84.12" height="30">
+                    <use href="./icons/footer-sprite.svg#icon-footer-logo"></use>
+                </svg>
+            </a>
+        </div>
+        
     </div> 
-</section>
+</footer>
