--- a/src/partials/teacher.html
+++ b/src/partials/teacher.html
@@ -3,7 +3,7 @@
         <h2 class="teacher-title">Преподаватель</h2>
         <div class="teacher">
             <div class="teacher__left-side">
-                <picture>
+                <picture class="teacher-img">
                     <source srcset="./images/teacher/teacher-d.webp 1x, ./images/teacher/teacher-d@2x.webp 2x"
                         media="(min-width: 1200px)" type="image/webp">
                     <source srcset="./images/teacher/teacher-d.jpg 1x, ./images/teacher/teacher-d@2x.jpg 2x"
@@ -23,38 +23,35 @@
             <div class="teacher__right-side">
                 <h3 class="teacher-name">Елена Морева</h3>
                 <ul class="teacher-skill">
-                    <li>
-                        <svg>
+                    <li class="teacher-skill-item">
+                        <svg class="teacher__svg">
                             <use href="./icons/sprite-teacher.svg#icon-teacher-vector"></use>
                         </svg>
-                        Опыт подготовки учеников к ВНО - 6 лет
+                        <span>Опыт подготовки учеников к ВНО - 6 лет</span>
                     </li>
-                    <li>
-                        <svg>
+                    <li class="teacher-skill-item">
+                        <svg class="teacher__svg">
                             <use href="./icons/sprite-teacher.svg#icon-teacher-vector"></use>
                         </svg>
-                        Собственный результат сдачи ВНО - 197 баллов 2 года подряд
+                        <span> Собственный результат сдачи ВНО - 197 баллов 2 года подряд</span>
                     </li>
-                    <li>
-                        <svg>
+                    <li class="teacher-skill-item">
+                        <svg class="teacher__svg">
                             <use href="./icons/sprite-teacher.svg#icon-teacher-vector"></use>
                         </svg>
-                        Сдала на отлично международный аналог ВНО - Кембриджский PET (Preliminary English Test)
+                        <span>Сдала на отлично международный аналог ВНО - Кембриджский PET (Preliminary English
+                            Test)</span>
                     </li>
                 </ul>
                 <ul class="teacher-education">
                     <li> Высшее образование получила в Институте международных отношений НАУ по специальности
                         переводчик-аналитик.</li>
                     <li> В свободное время проходит курсы от лучших университетов мира по эффективному преподаванию и
-                        методикам
-                        написания
-                        сочинений.</li>
-                    <li>>В числе пройденных: English Grammar and Essay Writing (Berkeley), English Grammar&Style (The
-                        University of
-                        Queesland),
-                        How to Write an Essay (Berkeley), Academic and Business Writing (Berkeley), The Art of Teaching
-                        (GEMS education),
-                        Powerful Tools for Teaching and Learning (University of Houston).</li>
+                        методикам написания сочинений.</li>
+                    <li> В числе пройденных: English Grammar and Essay Writing (Berkeley), English Grammar&Style (The
+                        University of Queesland), How to Write an Essay (Berkeley), Academic and Business Writing
+                        (Berkeley), The Art of Teaching (GEMS education), Powerful Tools for Teaching and Learning
+                        (University of Houston).</li>
                 </ul>
                 <a class="teacher-link" href="#">Cambrige English Entry Level Certificate</a>
             </div>
