--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -24,9 +24,8 @@ img {
 body {
   margin: 0;
 
-  font-family: DM Sans, Titan One;
+  font-family: DM Sans;
   letter-spacing: 0.04em;
-  background-color: #ffffff;
 }
 .list {
   padding: 0;
