--- a/src/sass/_teacher.scss
+++ b/src/sass/_teacher.scss
@@ -1,4 +1,4 @@
-.teacher-main-title{
+.teacher-main-title {
     @include font(800, 20px, 1.3, 0.03em);
     color: var(--txt-dark);
     margin-bottom: 20px;
@@ -17,21 +17,17 @@
 }
 
 .check-box {
-    display: flex;
+    display: inline-block;
     flex-wrap: wrap;
 }
 
-.teacher-list::before {
+.list::before {
     position: absolute;
     content: "";
     width: 280px;
     height: 0;
     border: 1px solid var(--txt-grey);
     margin-bottom: 20px;
-}
-
-.teacher-list {
-    display: flex;
 }
 
 .teacher-subtitle {
