--- a/src/sass/components/_teacher.scss
+++ b/src/sass/components/_teacher.scss
@@ -1,4 +1,5 @@
 .teacher {
+  padding-top: 270px;
   &__list {
     width: 253px;
   }
@@ -78,7 +79,7 @@
     color: #ff6b09;
     text-decoration-line: underline;
     padding-top: 10px;
-    margin-bottom: 50px;
+
     @media screen and (max-width: 1343px) {
       font-size: 12px;
       line-height: 1.66;
@@ -88,6 +89,7 @@
 
 @media screen and (min-width: 768px) {
   .teacher {
+    padding-top: 302px;
     &__position {
       display: flex;
     }
@@ -117,6 +119,7 @@
 }
 @media screen and (min-width: 1344px) {
   .teacher {
+    padding-top: 329px;
     &__title {
       font-size: 46px;
       line-height: 130%;
