добавил стили дл' таблетки

--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -107,9 +107,10 @@
         <h3 class="program-title">5 семестр</h3>
         <ul class="sub-list">
           <li class="sub-item">
-            <h4 class="objects-title">-</h4>
+            <h4 class="objects-title">&nbsp;</h4>
             <ul class="objects-list">
-              <li class="objects-item">Revision Tests</li>
+              <li class="objects-item">Revision</li>
+              <li class="objects-item">Tests</li>
             </ul>
           </li>
         </ul>
