--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -4,7 +4,7 @@
   padding-right: 20px;
   margin-left: auto;
   margin-right: auto;
-  // border: 1px solid tomato;
+  border: 1px solid tomato;
 }
 
 @media screen and (min-width: 320px) {
