картинки готовы (кроме десктопа)

--- a/src/partials/our-program.html
+++ b/src/partials/our-program.html
@@ -126,7 +126,7 @@
       </li>
     </ol>
 
-    <picture>
+    <picture class="our-program__picture">
       <source
         srcset="
           ./images/our-program/our-program-desktop.webp    1x,
