--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -16,6 +16,7 @@ h5,
 h6 {
   margin: 0;
 }
+
 img {
   display: block;
   max-width: 100%;
@@ -35,7 +36,7 @@ img {
 body {
   margin: 0;
 
-  font-family: DM Sans;
+  font-family: 'DM Sans', sans-serif;
   font-size: 16px;
   letter-spacing: 0.04em;
 }
