приведение  соответсвие стилей

--- a/src/sass/components/header/_header.scss
+++ b/src/sass/components/header/_header.scss
@@ -102,6 +102,7 @@ header {
   padding-top: 12px;
   padding-bottom: 12px;
   color: $main-white-color;
+  text-decoration: none;
   border: 1px solid #e18298;
   &:hover,
   &:focus {
@@ -169,7 +170,9 @@ header {
   margin-bottom: 32px;
   margin-left: 21px;
   font-weight: 700;
+  font-size: 16px;
   transition: 250ms;
+  box-shadow: none;
   &:hover,
   &:focus {
     transform: scale(1.1);
