--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -1,5 +1,63 @@
+
+.products {
+    padding-top: 122px;
+    padding-bottom: 98px;
+    background-color: $color-text-white;
+
+    @media screen and (min-width: 1200px) {
+    padding-bottom: 112px;
+    }
+    @media screen and (min-width: 1200px){
+    padding-top: 127px;
+    padding-bottom: 119px;
+    }
+
+}
+
+.products-secondary-title  {
+    font-family: Titan One;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 1.16;
+    text-align: center;
+    text-transform: uppercase;
+    color:$color-ellipse;
+    margin-bottom: 15px;
+
+}
+
+.products-title {
+    font-family: Titan One;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 34px;
+    line-height: 1.147;
+    text-align: center;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+
+    color :$color-accent;
+    margin-bottom: 31px;
+
+    @media screen and (min-width: 768px) {
+    margin-bottom: 39px;
+    }
+
+    @media screen and (min-width: 1200px) {
+    padding-bottom: 49px;
+    
+    }
+}
+
 .product-cards {
     width: 100%;
+
+    @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: space-between;
+    }
+
 }
 
 
@@ -11,7 +69,7 @@
     line-height: 1.15;
     letter-spacing: 0.04em;
     text-transform: uppercase;
-    color: #FFF;
+    color: $color-text-white;
     text-align: center;
     margin-bottom: 30px;
 }
@@ -24,7 +82,7 @@
     line-height: 152%;
     text-align: center;
     letter-spacing: 4px;
-    color: #FFFFFF;
+    color: $color-text-white;
     margin-bottom: 30px;
 }
 
@@ -33,7 +91,6 @@
 
 .cards-item {
     width: 280px;
-    /* height: 599px; */
     padding-top: 113px;
     position: relative;
     margin-bottom: 17px;
@@ -41,37 +98,73 @@
 
 
 .card-description {
-    width: 280px;
-    /* height: 485px; */
+    width: 280px;   
     border-radius: 24px;
     padding-top: 161px;
-    /* position: relative; */
+    padding-bottom: 41px;
+    
+    @media screen and (min-width:768px) {
+    width: 220px;
+    padding-bottom: 40px;
+    }
+
+    @media screen and (min-width: 1280px) {
+        width: 350px;
+        padding-bottom: 50px;
+    }
 }
 
-.card-img {
+.products-thumb {
+
     position: absolute;
-    top: 0px;
-    right: 0;
+    top: 113px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    @media screen and (min-width:768px) {
+    width: 220px;
+    }
+    @media screen and (min-width: 1280px) {
+    width: 337px;
+    }
+}
+.card-img {
+    display: block;
+    margin: 0px;
 }
 
 .ice_cream {
-    background: #FFB8CA;
+    background: $color-header;
 }
 
 .ice_coffee {
-    background: #F0D1A5;
+    background:$color-products-coffe;
 
 }
 
 .milkshakes {
-    background: #C2E297;
+    background: $color-products-shakes;
 
 }
 
-.card-circle {
-    margin-right: 120px;
-    margin-left: 120px;
-    margin-bottom: 41px;
+
+.more { 
+    position: relative;
+
+    margin-left: auto;
+    margin-right: auto;
+    width: 40px;    
+    height: 40px;
+    background-color: $color-text-white;
+    border-radius: 50%;
+   
+}
+
+.to-right-2 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    fill: $color-accent;
 }
 
 
@@ -80,12 +173,14 @@
     justify-content: center;
     width: inherit;
     height: 6px;
+    margin-bottom: 30px;
 
-
-    outline: green solid 1px;
+    @media screen and (min-width: 1200px) {
+    margin-bottom: 32px;
+}
 }
 
 .dots-icon {
-
     margin-right: 4px
 }
+
