--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -1,5 +1,5 @@
 .hero-title{
-    font-family: Montserrat;
+    font-family: var(--main-font);
     font-style: normal;
     font-weight: 800;
     font-size: 20px;
@@ -9,7 +9,7 @@
     color: #111518;
 }
 .hero-description-first{
-    font-family: Montserrat;
+    font-family:var(--main-font);
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
@@ -22,7 +22,7 @@
     margin-top: 30px;
 }
 .hero-description-second{
-    font-family: Montserrat;
+    font-family: var(--main-font);
     font-style: normal;
     font-weight: bold;
     font-size: 14px;
@@ -34,7 +34,7 @@
     color: #111518;
 }
 .hero-description-third{
-    font-family: Montserrat;
+    font-family: var(--main-font);
     font-style: normal;
     font-weight: bold;
     font-size: 14px;
@@ -43,13 +43,13 @@
     display: flex;
     align-items: center;
     letter-spacing: 0.08em;
-    color: #FF6B09;
+    color:var(--accent-color);
 }
 .hero-btn{
     margin-top: 30px;
     width: 260px;
     height: 48px;
-    font-family: Montserrat;
+    font-family: var(--main-font);
     font-style: normal;
     font-weight: bold;
     font-size: 12px;
@@ -60,9 +60,11 @@
     letter-spacing: 0.08em;
     text-transform: uppercase;
     color: #FFFFFF;
-    background: #FF6B09;
+    background:var(--accent-color);
     border: transparent;
+    
 }
+
 .hero{
     padding: 50px 0;
     background-image:
@@ -100,22 +102,22 @@
       width: 100px;
       height: 62px;
       margin-right: 10px;
-      fill:#FF6B09;
+      fill:var(--accent-color);
 }
 .hero-advantages-icon-program{
     width: 130px;
     height: 65px;
     margin-right: 10px;
-    fill:#FF6B09;
+    fill:var(--accent-color);;
 }
 .hero-advantages-icon-method{
     width: 100px;
     height: 64px;
     margin-right: 10px;
-    fill:#FF6B09;
+    fill:var(--accent-color);;
 }
 .hero-advantages-description{
-    font-family: Montserrat;
+    font-family: var(--main-font);
     font-style: normal;
     font-weight: bold;
     font-size: 14px;
@@ -153,11 +155,6 @@
         padding-bottom: 50px;
         background-image:
             url("../Images/Hero/Fon/fon_tab.jpg");
-        background-repeat: no-repeat;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        background-position: center;
         background-size: 1315px 290px;
     }
     
@@ -221,11 +218,6 @@
     padding-bottom: 130px;
     background-image:
         url("../Images/Hero/Fon/fon_desk.jpg");
-    background-repeat: no-repeat;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-position: center;
     background-size: 1680px 400px;
 }
 
@@ -238,3 +230,4 @@
     }
   }
 }
+
