--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,8 +4,8 @@
       <h2 class="footer-title">homemade ice cream made</h2>
       <p class="footer-passion">with passion</p>
     </div>
-    <div>
-      <ul>
+    <div class="ffff">
+      <ul class="ft-icon">
         <li class="footer-social">
           <a href="">
             <svg class="footer-icon">
@@ -28,11 +28,11 @@
           </a>
         </li>
       </ul>
-      <p>
+      <p class="devis">
         Feel free to contact
         <span class="footer-contact">+61 (0) 383 766 284</span>
       </p>
-      <div>
+      <div class="f-l">
         <p class="footer-logo">&copy; 2019 - IceCream. All Rights Reserved.</p>
       </div>
     </div>
