--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,16 +1,19 @@
 @import './styleDefoult/mixin';
 .footer{
     
-    background-color: gold;
+    background-color: #fff5f6;
 }
 .footer-container {
     @include container();
+    display: flex;
+    background-color: #fff5f6;
+    
     height: 100px;
 }
 .footer-title {
    
     color: #ffa5ba ;
-    
+    font-family: titan one;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
@@ -18,41 +21,84 @@
     text-transform: uppercase;
     margin-bottom: 17px;
     margin-left: 22px;
+    margin-right: 66px;
     justify-content: center;
 }
 
 .footer-passion {
+
     color: #d41443;
+    font-family: titan one;
     font-weight: 400;
     font-size: 34px;
     line-height: 1.2;
     letter-spacing: 0.04em;
     text-transform: uppercase;
     margin-left: 22px;
+    margin-right: 100px;
     margin-top: 15px;
+}
+.ft-icon{
+    display: flex;
+    align-items: center;
+    margin-top: 43px;
+   
+    
 }
 .footer-social{
     display: flex;
+    text-align: center;
     justify-content: center;
     align-items: center;
-    width: 44px;
-    height: 44px;
+    
+}
+.footer-icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 32px;
+    height: 32px;
     border-radius: 50%;
     margin-left: 208px;
+    margin-right: 40px;
 }
+
+.devis{
+    
+    display: flex;
+    font-family: Dm sans;
+    font-size: 12px;
+    font-weight: bold;
+    text-align: right;
+}
+.footer-contact{
+
+    display: flex;
+    font-family: Dm sans;
+    font-size: 12px;
+    font-weight: bold;
+    justify-content: center;
+    text-align: right;
+ align-items: center;
+    color: #d41443;
+  
+   
+    padding-left: 10px;
+}
+
 .footer-logo{
-    display: block;
+
+    
+    
  position: absolute;
 color:  #907E82;
+font-family: Dm sans;
 font-weight: bold;
 font-size: 14px;
 
 text-align: center;
 
-
 }
-.footer-contact{
-    color: #d41443;
-    font-size: 14px;
-    text-align: right;
+.f-1{
+    display: flex;
 }
