--- a/src/sass/layout/_program.scss
+++ b/src/sass/layout/_program.scss
@@ -15,6 +15,9 @@
   margin-bottom: 43px;
 
   @media screen and (min-width: 768px) {
+    font-size: 26px;
+    line-height: 1.3;
+
     text-align: left;
     margin-bottom: 52px;
   }
