--- a/src/partials/page-header.html
+++ b/src/partials/page-header.html
@@ -23,16 +23,16 @@
             <div class="navigation-block">
                 <ul class="navigation-list">
                     <li class="navigation-list-item">
-                        <a href="./index.html" class="nav-link">Программа обучения</a>
+                        <a href="./index.html#our-program" class="nav-link">Программа обучения</a>
                     </li>
                     <li class="navigation-list-item">
-                        <a href="#" class="nav-link">О нас</a>
+                        <a href="./index.html#teachers" class="nav-link">О нас</a>
                     </li>
                     <li class="navigation-list-item">
-                        <a href="#" class="nav-link">Варианты обучения</a>
+                        <a href="./index.html#how-we-do-it" class="nav-link">Варианты обучения</a>
                     </li>
                     <li class="navigation-list-item">
-                        <a href="#" class="nav-link">Контакты</a>
+                        <a href="./index.html#page-footer" class="nav-link">Контакты</a>
                     </li>
                 </ul>
                 <button type="button" class="button-call-menu">Консультация по телефону</button>
