--- a/src/sass/layout/_how-we-do-it.scss
+++ b/src/sass/layout/_how-we-do-it.scss
@@ -85,7 +85,7 @@
 
   box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
 
-  transition: background-color 250ms var(--timing-function);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   @media screen and (max-width: 767px) {
     height: 280px;
@@ -116,7 +116,7 @@
 
   fill: var(--orange-color);
 
-  transition: fill 250ms var(--timing-function);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   .how-we-do-it__link:hover &,
   .how-we-do-it__link:focus & {
@@ -129,7 +129,7 @@
   letter-spacing: 0.08em;
   color: var(--black-color);
 
-  transition: color 250ms var(--timing-function);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   @media screen and (max-width: 1343px) {
     font-size: 14px;
@@ -158,7 +158,7 @@
   letter-spacing: 0.08em;
   color: var(--black-color);
 
-  transition: color 250ms var(--timing-function);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   @media screen and (max-width: 767px) {
     padding: 0 7px;
@@ -189,7 +189,7 @@
   letter-spacing: 0.08em;
   color: var(--orange-color);
 
-  transition: color 250ms var(--timing-function);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   .how-we-do-it & {
     @media screen and (min-width: 767px) and (max-width: 1343px) {
