--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -5,12 +5,15 @@
 
         <div class="benefits-description">
 
-            <img src="../images/cow.jpg" alt="cow">
+            <img src="./images/cow.jpg" alt="cow">
             <p>Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
-
+            <div class="special">
+                <p>Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt. </p>
+                <p>Aliquam erat volutpat. Aenean accumsan.</p>
+            </div>         
+            
             <button class="read-more">read more
-                <svg class="read-more=svg" width="10" height="10"> <use href="./svg/symbol-defs.svg#icon-icon-send"></use> </svg>
+                <!-- <svg class="read-more=svg" width="10" height="10"> <use href="./svg/symbol-defs.svg#icon-icon-send"></use> </svg> -->
             </button>
         </div>
 
@@ -18,20 +21,20 @@
             <ul class="benefits-list">
 
                 <li>
-                    <svg class="benefits-list-svg" width="33" height="50"> <use href="../images/icons/IceCreamIcons.svg#icon-home"></use> </svg>
+                    <!-- <svg class="benefits-list-svg" width="33" height="50"> <use href="../images/icons/IceCreamIcons.svg#icon-home"></use> </svg> -->
                     <h3>721</h3>
                     <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
                 </li>
 
                 
                 <li class="benefits-list-item">
-                    <svg class="benefits-list-svg" width="33" height="50"> <use href="../images/icons/IceCreamIcons.svg#icon-home"></use> </svg>
+                    <!-- <svg class="benefits-list-svg" width="33" height="50"> <use href="../images/icons/IceCreamIcons.svg#icon-home"></use> </svg> -->
                     <h3>16kg</h3>
                     <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
                 </li>
 
                 <li>
-                    <svg class="benefits-list-svg" width="33" height="50"> <use href="../images/icons/IceCreamIcons.svg#icon-home"></use> </svg>
+               
                     <h3>84</h3>
                     <p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
                 </li>
