--- a/src/sass/components/_benefits.scss
+++ b/src/sass/components/_benefits.scss
@@ -1,22 +1,35 @@
 
 .benefits {
 
-    & h2 {
-        margin: auto;
-    }
-
-    & h3 {
-        margin: auto;
-    }
+& p {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.85;
+}   
 }
+
+.benefits-description p {
+    padding-left: 45px;
+    padding-right: 45px;
+    font-style: normal;
+}
+
+.special {
+    color: $contacts-color;
+}
+
+
 .benefits-description {
     @media screen and (min-width: 1200px) {
-        background-image: url(../../images/splashing_milk@2x.jpg);
+        background-image: url(../images/splashing_milk@2x.jpg);
+        z-index: 1;
       }
 }
  
 .benefits-list-item {
     @media screen and (max-width: 767px) {
-        background-image: url(../../images/splashing_milk.jpg);
+        background-image: url(../images/splashing_milk.jpg);
+        z-index: 1;
+
       }
 }
