--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -89,19 +89,11 @@ h3 {
   }
 }
 
-.benefits title {
+.benefits h2 {
   margin: auto;
 }
 
-@media screen and (min-width: 1200px) {
-  .benefits-description {
-    background-image: url(../../images/splashing_milk@2x.jpg);
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .benefits-list-item {
-    background-image: url(../../images/splashing_milk.jpg);
-  }
+.benefits h3 {
+  margin: auto;
 }
 /*# sourceMappingURL=main.css.map */
