--- a/src/sass/layout/_teacher.scss
+++ b/src/sass/layout/_teacher.scss
@@ -54,8 +54,10 @@
   }
 }
 
-.teacher-skill-item {
-  display: flex;
+.teacher-skill-item::before {
+  content: '';
+  background-image: url('./icons/teacher-vector.svg');
+  // display: flex;
 }
 
 .teacher-education {
