--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,63 +1,65 @@
-<header>
-  <div class="container header">
-    <a href="#" class="logo">
-      <p class="logo_link">
-        Hell<svg class="logo_svg" height="29" width="21">
-          <use href="./images/sprite.svg#icon-fire"></use>
-        </svg>
-        EN
+<header class="header container">
+  <div class="menu-close">
+    <a href="#" class="logo-link">
+      <p class="logo">
+        Hell<span class="logo-svg"
+          ><svg class="logo-svg">
+            <use href="./images/sprite.svg#icon-fire"></use></svg></span
+        >EN
       </p>
-      <p class="logo_text">
-        <span class="logo_accent">Адский</span> английский
+      <p class="logo-text">
+        <span class="logo-accent">Адский</span> английский
       </p>
     </a>
+    <svg class="mobile_logo">
+      <use href="./images/sprite.svg#mobile_dark-logo"></use>
+    </svg>
     <nav class="nav">
-      <ul class="nav_list">
-        <li class="nav_list-item">
-          <a class="nav_link" href="#">Программы обучения</a>
+      <ul class="nav-list">
+        <li class="nav-list-item">
+          <a class="nav-link" href="#">Программы обучения</a>
         </li>
-        <li class="nav_list-item"><a class="nav_link" href="#">О нас</a></li>
-        <li class="nav_list-item">
-          <a class="nav_link" href="#">Варианты обучения</a>
+        <li class="nav-list-item"><a class="nav-link" href="#">О нас</a></li>
+        <li class="nav-list-item">
+          <a class="nav-link" href="#">Варианты обучения</a>
         </li>
-        <li class="nav_list-item"><a class="nav_link" href="#">Контакты</a></li>
+        <li class="nav-list-item"><a class="nav-link" href="#">Контакты</a></li>
       </ul>
     </nav>
-    <a class="header_button" href="#"> Консультация по телефону </a>
-    <a type="button" class="nav_menu-btn is-open" data-menu-button>
-      <svg height="12" width="20">
-        <use class="icon-cross" href="./images/sprite.svg#nav-menu"></use>
-        <use class="icon-menu" href="./images/sprite.svg#menu_closed"></use>
-      </svg>
+    <a class="header-button" href="#">консультация по телефону</a>
+
+    <svg class="nav-menu-btn" data-modal-open>
+      <use href="./images/sprite.svg#nav-menu"></use>
+    </svg>
+  </div>
+  <div class="menu-open container is-hidden" data-modal>
+    <a href="#" class="menu-logo">
+      Hell<span
+        ><svg class="logo-svg">
+          <use href="./images/sprite.svg#icon-fire"></use></svg></span
+      >EN
+      <p class="logo-text">
+        <span class="logo-accent">Адский</span> английский
+      </p>
     </a>
-    <a href="#" class="logo-mobile">
-      <svg height="29" width="80">
-        <use href="./images/sprite.svg#mobile_dark-logo"></use>
-      </svg>
-    </a>
-    <div class="menu" data-menu>
-      <a href="#" class="logo-mobile menu_dark-logo">
-        <svg height="29" width="80">
-          <use href="./images/sprite.svg#mobile_logo"></use>
-        </svg>
-      </a>
-      <nav class="menu_nav">
-        <ul class="menu_nav-list">
-          <li class="menu_nav-list-item">
-            <a class="menu_nav-link" href="#">Программы обучения</a>
-          </li>
-          <li class="menu_nav-list-item">
-            <a class="menu_nav-link" href="#">О нас</a>
-          </li>
-          <li class="menu_nav-list-item">
-            <a class="menu_nav-link" href="#">Варианты обучения</a>
-          </li>
-          <li class="menu_nav-list-item">
-            <a class="menu_nav-link" href="#">Контакты</a>
-          </li>
-        </ul>
-      </nav>
-      <a class="menu_header-button" href=""> Консультация по телефону </a>
-    </div>
+    <svg class="mobile_logo">
+      <use href="./images/sprite.svg#mobile_logo"></use>
+    </svg>
+    <nav class="menu-nav">
+      <ul class="nav-list">
+        <li class="nav-list-item">
+          <a class="nav-link" href="#">Программы обучения</a>
+        </li>
+        <li class="nav-list-item"><a class="nav-link" href="#">О нас</a></li>
+        <li class="nav-list-item">
+          <a class="nav-link" href="#">Варианты обучения</a>
+        </li>
+        <li class="nav-list-item"><a class="nav-link" href="#">Контакты</a></li>
+      </ul>
+    </nav>
+    <a class="menu-header-button" href="#"> консультация по телефону </a>
+    <svg class="menu-close-btn" data-modal-close>
+      <use href="./images/sprite.svg#menu_closed"></use>
+    </svg>
   </div>
 </header>
