--- a/src/sass/components/_benefits.scss
+++ b/src/sass/components/_benefits.scss
@@ -1,6 +1,25 @@
 
 .benefits {
 
+& h2 {
+    margin-top: 125px;
+    margin-bottom: 15px;
+}
+
+& h3 {
+    @media screen and (max-width: 767px){
+    margin-bottom: 25px;  
+    }
+
+    @media screen and (min-width: 768px){
+        margin-bottom: 50px;  
+        }
+    
+    @media screen and (min-width: 1200px){
+        margin-bottom: 55px;  
+        }      
+}
+
 & p {
     font-weight: 500;
     font-size: 12px;
@@ -8,14 +27,20 @@
 }   
 }
 
-.benefits-description p {
-    padding-left: 45px;
-    padding-right: 45px;
-    font-style: normal;
-}
+.benefits-description {
+    &  p {
+        margin-top: 45px;
+        margin-bottom: 30px;
+        padding-left: 45px;
+        padding-right: 45px;
+        font-style: normal;
+    }
 
-.special {
+    & .special p {
+    margin-top: 0px;
+    margin-bottom: 20px;
     color: $contacts-color;
+}
 }
 
 
@@ -30,6 +55,14 @@
     @media screen and (max-width: 767px) {
         background-image: url(../images/splashing_milk.jpg);
         z-index: 1;
-
       }
+
+}
+
+.benefits-list {
+   
+   @media screen and (max-width: 767px) {
+   max-width: 230px;
+   }
+   
 }
