--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -90,10 +90,59 @@ h3 {
 }
 
 .benefits h2 {
-  margin: auto;
+  margin-top: 125px;
+  margin-bottom: 15px;
 }
 
-.benefits h3 {
-  margin: auto;
+@media screen and (max-width: 767px) {
+  .benefits h3 {
+    margin-bottom: 25px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .benefits h3 {
+    margin-bottom: 50px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .benefits h3 {
+    margin-bottom: 55px;
+  }
+}
+
+.benefits p {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.85;
+}
+
+.benefits-description p {
+  margin-top: 45px;
+  margin-bottom: 30px;
+  padding-left: 45px;
+  padding-right: 45px;
+  font-style: normal;
+}
+
+.benefits-description .special {
+  margin-top: 0px;
+  margin-bottom: 20px;
+  color: #907e82;
+}
+
+@media screen and (min-width: 1200px) {
+  .benefits-description {
+    background-image: url(../images/splashing_milk@2x.jpg);
+    z-index: 1;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .benefits-list-item {
+    background-image: url(../images/splashing_milk.jpg);
+    z-index: 1;
+  }
 }
 /*# sourceMappingURL=main.css.map */
