--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -62,9 +62,13 @@
     color: #FFFFFF;
     background:var(--accent-color);
     border: transparent;
-    
+    transition: all 250ms var(--timing-fn);
 }
-
+.hero-btn:focus, .hero-btn:hover{
+    background: #FFFFFF;
+    color:var(--accent-color);
+    border: 2px solid var(--accent-color);
+}
 .hero{
     padding: 50px 0;
     background-image:
