--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,19 +1,65 @@
 .footer {
-  //padding-top: 30px;
-  //padding-bottom: 21px;
   text-align: center;
   &-address {
     padding-top: 30px;
     padding-bottom: 30px;
     text-align: center;
   }
+  &-logo-link {
+    font-family: Montserrat;
+    font-weight: 800;
+    font-size: 14px;
+    line-height: 136%;
+    letter-spacing: 0.04em;
+    color: $primary-text-color;
+    align-items: baseline;
+  }
+  &-logo-translate {
+    font-family: Montserrat;
+    font-weight: bold;
+    font-size: 5px;
+    line-height: 7px;
+    letter-spacing: 0.16em;
+    text-transform: uppercase;
+    color: $primary-text-color;
+  }
+  &-logo-text {
+    color: $accent-text-color;
+  }
+  &-logo-icon {
+    width: 15px;
+    height: 20px;
+  }
+  &-icon-phone {
+    width: 20px;
+    height: 19px;
+    margin-right: 10px;
+  }
+  &-contact-tel {
+    font-family: Montserrat;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 1.21;
+    letter-spacing: 0.08em;
+    color: $primary-text-color;
+  }
+  &-logo-container {
+    display: flex;
+    margin-top: 21px;
+    margin-bottom: 31px;
+    align-items: center;
+    justify-content: center;
+  }
+  &-instagram {
+    justify-content: center;
+    //margin-right: 120px;
+    //margin-left: 120px;
+  }
   &-security {
     background-color: $dark-background;
-    width: 320px;
-    height: 70px;
+    background-size: 320px 70px;
     padding-top: 21px;
     padding-bottom: 21px;
-    //margin-top: ;
     &-text {
       font-family: Montserrat;
       font-weight: 500;
@@ -22,4 +68,7 @@
       color: $secondary-text-color;
     }
   }
+}
+img {
+  display: inline;
 }
