добавляет скайл и бордер при фокусе

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
     <div class="container">
         <div class="footer-top">
-            <a href="" class="footer-top__logo logo">
+            <a href="" class="footer-top__logo logo"  aria-label="логотип сайта">
                 <span class="logo__first-part">Hell</span>
                     <svg class="logo__icon"> 
                         <use href="./images/sprite.svg#icon-fire"></use>
@@ -17,7 +17,7 @@
                         <use href="./images/sprite.svg#icon-phone"></use> 
                     </svg> +38 (000) 000 00 00
                 </a>
-                <a href="" class="footer-top__link-phone-insta link">
+                <a href="https://www.instagram.com/" class="footer-top__link-insta link" target="_blank">
                      <img src="./images/footer/footer-instagram.svg" alt="instagram">
                 </a>
             </div>
