--- a/src/sass/layout/_registration.scss
+++ b/src/sass/layout/_registration.scss
@@ -126,6 +126,11 @@
     font-size: 20px;
     line-height: 1.2;
   }
+
+  &:focus {
+    outline: none;
+    border-color: var(--accent-color);
+  }
 }
 
 .registration-form__input-name {
@@ -155,4 +160,8 @@
     font-size: 20px;
     line-height: 1.2;
   }
+}
+
+.registration-form__input:focus::placeholder {
+  color: var(--accent-color);
 }
