--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -61,6 +61,7 @@
   line-height: 1.21;
   letter-spacing: 0.08em;
   color: #111518;
+  transform: scale(1);
   @media screen and (max-width: 767px) {
     font-size: 20px;
     line-height: 1.2;
@@ -77,10 +78,16 @@
     font-size: 30px;
     line-height: 1.23;
   }
+
+  &:hover,
+  &:focus {
+    transform: scale(1.1);
+  }
 }
 
-.footer-top__link-phone-insta {
+.footer-top__link-insta {
   display: flex;
+  transform: scale(1);
 
   @media screen and (max-width: 767px) {
     justify-content: center;
@@ -96,6 +103,11 @@
 
       background-color: #b9b9b9;
     }
+  }
+
+  &:hover,
+  &:focus {
+    transform: scale(1.1);
   }
 }
 
