--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -179,7 +179,7 @@
     transition: all 250ms var(--timing-fn);
 }
 .header-button:focus, .header-button:hover{
-    background-color: var(--accent-color);
+    background: var(--accent-color);
     color: #FFFFFF;
 }
 .header-nav-logo-bottom{
@@ -236,7 +236,7 @@
         transition: all 250ms var(--timing-fn);
     }
     .header-button-tablet:focus, .header-button-tablet:hover{
-        background-color: var(--accent-color);
+        background: var(--accent-color);
         color: #FFFFFF;
     }
     .header-btn-tablet-container{
