фикс багов с цветом фона, размером шрифта

--- a/src/sass/components/header/_header.scss
+++ b/src/sass/components/header/_header.scss
@@ -7,7 +7,11 @@ header {
   justify-content: space-between;
   align-items: center;
   padding-top: 6px;
+  padding-bottom: 6px;
+  padding-left: 20px;
+  padding-right: 20px;
   width: 100%;
+  background-color: $light-pink-color;
 
   @media (min-width: 768px) {
     padding-top: 37px;
@@ -31,6 +35,7 @@ header {
   font-family: Titan One;
   font-size: 26px;
   width: 200px;
+  height: 100%;
   transition: 250ms;
   &:hover,
   &:focus {
