іконки для таблетки та десктопа

--- a/src/sass/layout/_section-teacher.scss
+++ b/src/sass/layout/_section-teacher.scss
@@ -1,7 +1,7 @@
 @media screen and (min-width: 320px) {
   .teacher {
     padding-top: 270px;
-    padding-bottom: 40px;
+    padding-bottom: 50px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -14,7 +14,7 @@
 @media screen and (min-width: 1344px) {
   .teacher {
     padding-top: 329px;
-    padding-bottom: 60px;
+    padding-bottom: 130px;
   }
 }
 .subtitle {
@@ -25,12 +25,6 @@
   line-height: 130%;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
-}
-@media screen and (min-width: 320px) {
-  .guarantee .subtitle {
-    text-align: center;
-    margin-bottom: 30px;
-  }
 }
 
 @media screen and (min-width: 1344px) {
@@ -87,7 +81,7 @@
   .teacher-name {
     font-size: 30px;
     line-height: 1.123;
-    margin-bottom: 15px;
+    margin-bottom: 30px;
     border-bottom: 1px solid #b9b9b9;
     width: 640px;
   }
@@ -115,7 +109,6 @@
   line-height: 1.214;
   letter-spacing: 0.06em;
   color: var(--title-text-color);
-  margin-left: 9px;
 }
 @media screen and (min-width: 320px) {
   .teacher-list-item {
@@ -128,37 +121,50 @@
     font-size: 16px;
     line-height: 1.25;
     margin-bottom: 15px;
-    margin-left: 34px;
   }
 }
+
 @media screen and (min-width: 320px) {
   .teacher-list-item::before {
-    display: inline-block;
     content: '';
-    width: 17px;
+    width: 16px;
     height: 14px;
+    margin-right: 10px;
+    background-repeat: no-repeat;
     background-image: url(../images/teacher/vector.svg);
     background-repeat: no-repeat;
+  }
+  .teacher-list-item {
+    display: flex;
   }
 }
 @media screen and (min-width: 768px) {
   .teacher-list-item::before {
-    display: inline-block;
     content: '';
     width: 17px;
     height: 14px;
+    margin-right: 8px;
     background-image: url(../images/teacher/vector.svg);
     background-repeat: no-repeat;
+  }
+  .teacher-list-item {
+    display: flex;
   }
 }
 @media screen and (min-width: 1344px) {
   .teacher-list-item::before {
-    display: inline-block;
     content: '';
     width: 24px;
     height: 20px;
+    margin-right: 34px;
     background-image: url(../images/teacher/vector.svg);
     background-repeat: no-repeat;
+  }
+  .teacher-list-item {
+    display: flex;
+  }
+  .teacher-list-container {
+    margin-top: 20px;
   }
 }
 
@@ -183,9 +189,7 @@
 .teacher-list-container-text:not(:last-child) {
   margin-bottom: 24px;
 }
-.teacher-list-container {
-  margin-bottom: 10px;
-}
+
 @media screen and (min-width: 1344px) {
   .teacher-list-container-text {
     font-size: 18px;
@@ -208,7 +212,13 @@
     line-height: 1.555;
   }
 }
-
+//----------------------------GUARANTEE SECTION
+@media screen and (min-width: 320px) {
+  .guarantee .subtitle {
+    text-align: center;
+    margin-bottom: 30px;
+  }
+}
 .guarantee-list-item {
   font-family: Montserrat;
   font-style: normal;
@@ -220,14 +230,6 @@
 .guarantee-list-item:not(:last-child) {
   margin-bottom: 24px;
 }
-/*.guarantee-list-item::before {
-  display: inline-block;
-  content: '';
-  width: 14px;
-  height: 20px;
-  margin-right: 20px;
-  background-image: url(../images/teacher/fire.svg);
-}*/
 
 @media screen and (min-width: 1344px) {
   .guarantee-list-item {
