Problems and realization sections

--- a/src/sass/layout/_problems.scss
+++ b/src/sass/layout/_problems.scss
@@ -75,6 +75,20 @@
     margin-bottom: 10px;
 }
 
+.problems__picture {
+    position: absolute;
+    top: 86px;
+    right:0;
+    z-index: -1;
+    display: none;
+}
+
+@media screen and (min-width:320px) and (max-width:767px) {
+    .problems__title {
+        margin-bottom: 23px;
+    }
+}
+
 @media screen and (min-width:768px) {
     .problems__title {
         font-size: 26px;
@@ -114,10 +128,15 @@
         line-height: 1.65;
     }
     .problems__title {
+        font-size: 46px;
+        line-height: 1.3043;
         padding-top: 0px;
         margin-bottom: 70px;
     }
     .problems__section::before {
         height: 558px;
+    }
+    .problems__picture {
+        display: block;
     }
 }
