--- a/src/sass/layout/_realization.scss
+++ b/src/sass/layout/_realization.scss
@@ -1,8 +1,192 @@
-.registration__description {
+.realization {
+  padding-top: 64px;
+  padding-bottom: 50px;
+}
+
+.realization__card {
+  background-color: #FFFFFF;
+  box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
+  margin-top: 15px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+  cursor:pointer;
+
+  transition-property: background-color, transform;
+  transition-duration: 300ms;
+  transition-timing-function: linear;
+  transition-delay: 0;
+}
+
+.realization__icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  fill: #ff6b09;
+
+  transition-property: fill, transform;
+  transition-duration: 200ms;
+  transition-timing-function: linear;
+}
+
+.realization__header {
+  font-family: Montserrat;
+  font-style: normal;
   font-weight: 800;
-  font-size: 14px;
-  line-height: 1.36;
+  font-size: 20px;
+  line-height: 1.3;
+  /* or 26px */
   text-align: center;
   letter-spacing: 0.03em;
-  color: #ffffff;
+  padding-bottom: 13px;
+
+  color: #111518;
+
+  transition-property: color, transform;
+  transition-duration: 200ms;
+  transition-timing-function: linear;
+}
+
+.realization__title {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.4285;
+  /* or 143% */
+  text-align: center;
+  letter-spacing: 0.08em;
+
+  color: #111518;
+
+  transition-property: color, transform;
+  transition-duration: 200ms;
+  transition-timing-function: linear;
+}
+
+.realization__description {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.6666;
+  /* or 167% */
+  text-align: center;
+  letter-spacing: 0.08em;
+  
+  color: #B9B9B9;
+
+  transition-property: color, transform;
+  transition-duration: 200ms;
+  transition-timing-function: linear;
+}
+
+.realization__card {
+  width: 280px;
+  min-height: 280px;
+}
+
+.realization__stripe {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 1.65;
+  text-align: center;
+  /* or 33px */
+  letter-spacing: 0.08em;
+
+  color: #FF6B09;
+}
+
+.realization__card:hover,
+.realization__card:focus {
+  background-color: #FF6B09;
+}
+
+.realization__card:hover .realization__title,
+.realization__card:focus .realization__title {
+  color: white;
+}
+
+.realization__card:hover .realization__description,
+.realization__card:focus .realization__description {
+  color: white;
+}
+
+.realization__card:hover .realization__stripe,
+.realization__card:focus .realization__stripe {
+  color: white;
+}
+
+.realization__card:hover .realization__icon,
+.realization__card:focus .realization__icon {
+  fill: white;
+}
+
+@media screen and (min-width:320px) and (max-width:767px) {
+  .realization__title {
+    margin-top: 20px;
+  }
+  .realization__stripe {
+    margin: 5px 0 5px 0;
+  }
+  .realization__card {
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width:768px) {
+  .realization__header {
+    font-size: 26px;
+    line-height: 1.3076;
+    padding-bottom: 3px;
+  }
+  .realization__title {
+    margin-top: 30px;
+  }
+  .realization__stripe {
+    margin: 10px 0 10px 0;
+  }
+  .realization__card {
+    margin-top: 27px;
+    padding: 40px 21px 40px 21px;
+    width: 334px;
+    min-height: 334px;
+  }
+  .realization__wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .realization {
+    padding-top: 50px;
+  }
+}
+
+@media screen and (min-width:1280px) {
+  .realization {
+    padding-top: 131px;
+  }
+  .realization__header {
+    font-size: 46px;
+    line-height: 1.3043;
+    text-align: left;
+    padding-bottom: 30px;
+  }
+  .realization__card {
+    width: 403.3px;
+    min-height: 396px;
+    margin-top: 20px;
+  }
+  .realization__title {
+    font-size: 20px;
+    line-height: 1.4;
+  }
+  .realization__description {
+    font-size: 18px;
+    line-height: 1.5555;
+  }
 }
