--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -31,5 +31,10 @@
                 <p class="problems__description">Недостатой самоорганизации и лень</p>
             </li>
         </ul>
+        <picture class="problems__picture">
+            <source srcset="./images/problems/problems-fire.png 1x, ./images/problems/problems-fire@2x.png 2x"
+            media="(min-width: 1280px)">
+            <img class="problems__picture-img" src="./images/problems/problems-fire.png" alt="Fire">
+        </picture>
     </div>
 </section>
