--- a/src/partials/realization.html
+++ b/src/partials/realization.html
@@ -1,59 +1,63 @@
 <section class="realization">
-    <h2 class="realization__header">Как мы это делаем</h2>
-    <div class="realization__card">
-        <svg class="realization__icon">
-            <use></use>
-        </svg>
-        <h3 class="realization__title">Адаптированная программа
-            подготовки к ВНО</h3>
-        <p class="realization__stripe"></p>
-        <p class="realization__description">Ты будешь изучать грамматику и лексику одновременно. И ты научишься писать сочинения.</p>
-    </div>
-    <div class="realization__card">
-        <svg class="realization__icon">
-            <use></use>
-        </svg>
-        <h3 class="realization__title">Аудитория и онлайн-обучение</h3>
-        <p class="realization__stripe"></p>
-        <p class="realization__description">Учитель поможет не только в аудитории, но и во время домашней подготовки.
-            Родители могут участвовать в чате при желании.</p>
-    </div>
-    <div class="realization__card">
-        <svg class="realization__icon">
-            <use></use>
-        </svg>
-        <h3 class="realization__title">Привычка читать на английском языке</h3>
-        <p class="realization__stripe"></p>
-        <p class="realization__description">Статьи из источников, которые используются при разработке настоящего ВНО, будут приходить на телефон дважды в неделю.</p>
-    </div>
-    <div class="realization__card">
-        <svg class="realization__icon">
-            <use></use>
-        </svg>
-        <h3 class="realization__title">Психологическая
-            поддержка</h3>
-        <p class="realization__stripe"></p>
-        <p class="realization__description">Мы научим тебя методикам прохождения тестирований, умению планировать свою подготовку уверенности 
-            в себе.</p>
-    </div>
-    <div class="realization__card">
-        <svg class="realization__icon">
-            <use></use>
-        </svg>
-        <h3 class="realization__title">Обучение по авторским пособиям</h3>
-        <p class="realization__stripe"></p>
-        <p class="realization__description">Тебе не нужно тратить время 
-            на  самостоятельный поиск материала и ничего покупать дополнительно. Мы составили 
-            2 пособия для тебя.</p>
-    </div>
-    <div class="realization__card">
-        <svg class="realization__icon">
-            <use></use>
-        </svg>
-        <h3 class="realization__title">Умение воспринимать устную английскуб речь</h3>
-        <p class="realization__stripe"></p>
-        <p class="realization__description">“F.R.I.E.N.D.S” тебе не помогут. Ты будешь регулярно слушать 
-            и разбирать аудиозаписи 
-            в соответствии с изучаемой лексикой.</p>
+    <div class="container">
+        <h2 class="realization__header">Как мы это делаем</h2>
+        <div class="realization__wrapper">
+            <div class="realization__card">
+                <svg class="realization__icon" height="48px" width="45.39px">
+                    <use href="./images/sprite.svg#icon-study_program"></use>
+                </svg>
+                <h3 class="realization__title">Адаптированная программа
+                    подготовки к ВНО</h3>
+                <p class="realization__stripe">—</p>
+                <p class="realization__description">Ты будешь изучать грамматику и лексику одновременно. И ты научишься писать сочинения.</p>
+            </div>
+            <div class="realization__card">
+                <svg class="realization__icon" height="47px" width="48px">
+                    <use href="./images/sprite.svg#icon-mobile_learning"></use>
+                </svg>
+                <h3 class="realization__title">Аудитория и<br> онлайн-обучение</h3>
+                <p class="realization__stripe">—</p>
+                <p class="realization__description">Учитель поможет не только в аудитории, но и во время домашней подготовки.
+                    Родители могут участвовать в чате при желании.</p>
+            </div>
+            <div class="realization__card">
+                <svg class="realization__icon" height="48px" width="65.43px">
+                    <use href="./images/sprite.svg#icon-open_book"></use>
+                </svg>
+                <h3 class="realization__title">Привычка читать на<br> английском языке</h3>
+                <p class="realization__stripe">—</p>
+                <p class="realization__description">Статьи из источников, которые используются при разработке настоящего ВНО, будут приходить на телефон дважды в неделю.</p>
+            </div>
+            <div class="realization__card">
+                <svg class="realization__icon" height="48.35px" width="48.97px">
+                    <use href="./images/sprite.svg#icon-group"></use>
+                </svg>
+                <h3 class="realization__title">Психологическая<br>
+                    поддержка</h3>
+                <p class="realization__stripe">—</p>
+                <p class="realization__description">Мы научим тебя методикам прохождения тестирований, умению планировать свою подготовку уверенности 
+                    в себе.</p>
+            </div>
+            <div class="realization__card">
+                <svg class="realization__icon" height="48px" width="39.83px">
+                    <use href="./images/sprite.svg#icon-female_student"></use>
+                </svg>
+                <h3 class="realization__title">Обучение по авторским пособиям</h3>
+                <p class="realization__stripe">—</p>
+                <p class="realization__description">Тебе не нужно тратить время 
+                    на  самостоятельный поиск материала и ничего покупать дополнительно. Мы составили 
+                    2 пособия для тебя.</p>
+            </div>
+            <div class="realization__card">
+                <svg class="realization__icon" height="48px" width="57.14px">
+                    <use href="./images/sprite.svg#icon-audio_book"></use>
+                </svg>
+                <h3 class="realization__title">Умение воспринимать устную английскуб речь</h3>
+                <p class="realization__stripe">—</p>
+                <p class="realization__description">“F.R.I.E.N.D.S” тебе не помогут. Ты будешь регулярно слушать 
+                    и разбирать аудиозаписи 
+                    в соответствии с изучаемой лексикой.</p>
+            </div>
+        </div>
     </div>
 </section>
